--- a/action.yml
+++ b/action.yml
@@ -21,9 +21,10 @@ runs:
     using: "composite"
     steps:
       - name: Download Artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
             path: ./assets
+            github_token: ${{ inputs.token }}
 
       - name: Fetch description
         run: |
