--- a/action.yml
+++ b/action.yml
@@ -42,19 +42,19 @@ runs:
           fi
         shell: bash
 
-      - name: Create Release
-        id: create-release
-        uses: actions/create-release@v1
-        env:
-            GITHUB_TOKEN: ${{ inputs.token }}
-        with:
-            tag_name: ${{ github.ref_name }}
-            release_name: "${{ inputs.name }} ${{ inputs.version }}"
-            body: |
-                ${{ inputs.name }} ${{ inputs.version }} Release
-                ${{ env.RELDESC }}
-            draft: false
-            prerelease: false
+    #   - name: Create Release
+    #     id: create-release
+    #     uses: actions/create-release@v1
+    #     env:
+    #         GITHUB_TOKEN: ${{ inputs.token }}
+    #     with:
+    #         tag_name: ${{ github.ref_name }}
+    #         release_name: "${{ inputs.name }} ${{ inputs.version }}"
+    #         body: |
+    #             ${{ inputs.name }} ${{ inputs.version }} Release
+    #             ${{ env.RELDESC }}
+    #         draft: false
+    #         prerelease: false
     
       - name: Upload release assets
         run: |
