--- a/action.yml
+++ b/action.yml
@@ -60,7 +60,7 @@ runs:
         run: |
             gh release create ${{ github.ref_name }} ./assets/*
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ inputs.token }}
         shell: bash
         
     #   - name: Upload Release Assets
