--- a/action.yml
+++ b/action.yml
@@ -30,47 +30,21 @@ runs:
             echo "VERSION: ${{ github.ref_name }}"
             ls -laR ./assets
         shell: bash
-
-      - name: Fetch description
-        run: |
-          if [ "${{ inputs.description }}" = "" ]; then
-              echo "RELDESC=${{ github.ref }}" >> $GITHUB_ENV
-          else
-              echo "RELDESC=${{ inputs.description }}" >> $GITHUB_ENV
-          fi
-        shell: bash
-
-    #   - name: Create Release
-    #     id: create-release
-    #     uses: actions/create-release@v1
-    #     env:
-    #         GITHUB_TOKEN: ${{ inputs.token }}
-    #     with:
-    #         tag_name: ${{ github.ref_name }}
-    #         release_name: "${{ inputs.name }} ${{ inputs.version }}"
-    #         body: |
-    #             ${{ inputs.name }} ${{ inputs.version }} Release
-    #             ${{ env.RELDESC }}
-    #         draft: false
-    #         prerelease: false
     
       - name: Upload release assets
         run: |
-            gh release create ${{ github.ref_name }} ./assets/*
+            if [ "${{ inputs.notes }}" = "auto" ]; then
+              DESC="--generate-notes"
+            elif [ "${{ inputs.notes }}" = "" ]; then
+              DESC="--title '${{ inputs.name }}'"
+            else
+              DESC="--title '${{ inputs.name }} ${{ github.ref_name }}' --notes '${{ inputs.notes }}'"
+            fi
+            gh release create ${{ github.ref_name }} $DESC ./assets/*
         env:
             GITHUB_TOKEN: ${{ inputs.token }}
         shell: bash
-        
-    #   - name: Upload Release Assets
-    #     id: upload-release-assets
-    #     uses: dwenegar/upload-release-assets@v1
-    #     env:
-    #         GITHUB_TOKEN: ${{ inputs.token }}
-    #     with:
-    #         release_id: ${{ steps.create-release.outputs.id }}
-    #         assets_path: ./assets  
 
 branding:
     icon: 'package'
     color: 'purple'
-    
