--- a/action.yml
+++ b/action.yml
@@ -37,13 +37,13 @@ runs:
       - name: Upload release assets
         run: |
             if [ "${{ inputs.notes }}" = "auto" ]; then
-              DESC="--title \"${{ inputs.name }} ${{ github.ref_name }}\" --generate-notes"
+              DESC="--title "\""${{ inputs.name }} ${{ github.ref_name }}"\"" --generate-notes"
             elif [ "${{ inputs.notes }}" = "" ]; then
-              DESC="--title \"${{ inputs.name }} ${{ github.ref_name }}\""
+              DESC="--title "\""${{ inputs.name }} ${{ github.ref_name }}"\"""
             else
-              DESC="--title \"${{ inputs.name }} ${{ github.ref_name }}\" --notes \"${{ inputs.notes }}\""
+              DESC="--title "\""${{ inputs.name }} ${{ github.ref_name }}"\"" --notes "\""${{ inputs.notes }}"\"""
             fi
-            gh release create ${{ github.ref_name }} $DESC ./assets/*
+            gh release create "${{ github.ref_name }}" $DESC ./assets/*
         env:
             GITHUB_TOKEN: ${{ inputs.token }}
         shell: bash
